--- a/libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.css
+++ b/libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.css
@@ -107,8 +107,14 @@
     display: none;
 }
 .leaflet-sidebar-content::-webkit-scrollbar-thumb {
-    background-color: #babac0;
+    background-color: #7d7d85;  /* Darker grey when dragging */
     border-radius: 16px;
+}
+.leaflet-sidebar-content::-webkit-scrollbar-thumb:hover {
+    background-color: #9e9ea7;  /* Lighter grey on hover */
+}
+.leaflet-sidebar-content::-webkit-scrollbar-thumb:active {
+    background-color: #babac0;
 }
 
 .collapsed > .leaflet-sidebar-content {
