when mouse over a compare table row, highlight the movement on map. Allow unselecting a row

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ body, html {
 	font-weight: bold;
 }
 
-#compare_table tr td.movement span:hover {
+#compare_table tr td.movement:hover {
 	text-decoration: underline;
     cursor: pointer;
 }
