Minor style tweak so that popups are less likely to be clipped by max bounds

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ body, html {
 	border: 1px solid #dddddd;
 	text-align: right;
 	padding: 3px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 	font-size: 12px;
 }
 .move-table th {
